# backend/src/main/java/com/mokimaki/arput/presentation/dto/article/addEvaluation/AddEvaluationInputData.java
@@ -1,0 +1,6 @@
+package com.mokimaki.arput.presentation.dto.article.addEvaluation;
+
+public record AddEvaluationInputData (
+        String articleId,
+        int evaluationId
+) { }
