# swagger/openapi.yaml
@@ -446,3 +446,28 @@ paths:
       responses:
         "200":
           description: "記事の削除に成功した場合"
+
+  "/article/{articleId}/evaluation/":
+    post:
+      tags: ["articles"]
+      summary: "記事の評価"
+      deprecated: false
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - name: "articleId"
+          in: "path"
+          description: "記事ID"
+          required: true
+          schema:
+            type: "string"
+        - name: "evaluationId"
+          in: "query"
+          description: "評価ID"
+          required: true
+          schema:
+            type: "number"
+            example: 1
+      responses:
+        "200":
+          description: "記事の評価に成功した場合"
